syntax = "proto3";

package syncvalue.v1;

option go_package = "github.com/user/kiki-agent/api/proto/syncvalue";

// SyncValue™ - AI Brain for LTV Prediction
// This service replaces the HTTP/JSON interface with high-performance gRPC
// Target: <1ms latency for real-time ad auction competitiveness

service SyncValueService {
  // PredictLTV uses dRNN to predict customer lifetime value
  // Returns: LTV prediction with 94.7% accuracy (±10% tolerance)
  rpc PredictLTV(LTVPredictionRequest) returns (LTVPredictionResponse);

  // PredictLTVBatch handles multiple predictions in a single call
  // Use for bulk processing (e.g., campaign optimization)
  rpc PredictLTVBatch(LTVBatchRequest) returns (LTVBatchResponse);

  // PredictLTVStream enables streaming predictions for real-time bidding
  // Client sends stream of requests, server returns stream of predictions
  rpc PredictLTVStream(stream LTVPredictionRequest) returns (stream LTVPredictionResponse);

  // GetModelHealth returns dRNN model status and accuracy metrics
  rpc GetModelHealth(HealthRequest) returns (HealthResponse);
}

// LTVPredictionRequest - Input for single LTV prediction
message LTVPredictionRequest {
  // Request metadata
  string request_id = 1;           // Unique request ID for tracing
  int64 timestamp_ms = 2;          // Request timestamp (Unix ms)
  
  // Customer attributes
  string customer_id = 3;          // Unique customer identifier
  string platform = 4;             // Platform: google_ads, meta, tiktok, etc.
  
  // Historical behavior features (for dRNN sequential pattern recognition)
  repeated CustomerEvent event_history = 5;  // Last N events (e.g., 30 days)
  
  // Current context
  double current_cac = 6;          // Current customer acquisition cost
  string campaign_id = 7;          // Campaign identifier
  string ad_group_id = 8;          // Ad group identifier (optional)
  
  // Feature vector (if using pre-computed features)
  repeated double features = 9;    // Dense feature vector for dRNN
  
  // Metadata
  map<string, string> metadata = 10; // Additional context (e.g., geo, device)
}

// CustomerEvent - Sequential event for dRNN pattern recognition
message CustomerEvent {
  int64 timestamp_ms = 1;          // Event timestamp (Unix ms)
  string event_type = 2;           // click, view, add_to_cart, purchase, etc.
  double event_value = 3;          // Event value (e.g., purchase amount)
  string source = 4;               // Event source (organic, paid, email, etc.)
  map<string, string> attributes = 5; // Event-specific attributes
}

// LTVPredictionResponse - Output with LTV prediction and confidence
message LTVPredictionResponse {
  // Response metadata
  string request_id = 1;           // Matches request_id from request
  int64 timestamp_ms = 2;          // Response timestamp (Unix ms)
  
  // Prediction
  double predicted_ltv = 3;        // Predicted lifetime value ($)
  double confidence = 4;           // Prediction confidence (0.0-1.0)
  double ltv_lower_bound = 5;      // 95% confidence interval lower bound
  double ltv_upper_bound = 6;      // 95% confidence interval upper bound
  
  // Model insights
  string model_version = 7;        // dRNN model version used
  repeated Feature top_features = 8; // Top contributing features
  
  // Performance
  int64 inference_time_us = 9;     // Inference time (microseconds)
  
  // Status
  PredictionStatus status = 10;    // Success, error, fallback, etc.
  string error_message = 11;       // Error details (if status != SUCCESS)
}

// Feature - Top contributing features to prediction
message Feature {
  string name = 1;                 // Feature name
  double importance = 2;           // Feature importance score
  double value = 3;                // Feature value
}

// PredictionStatus - Status codes for LTV predictions
enum PredictionStatus {
  SUCCESS = 0;                     // Prediction successful
  MODEL_ERROR = 1;                 // dRNN model error
  INVALID_INPUT = 2;               // Invalid request data
  INSUFFICIENT_DATA = 3;           // Not enough event history
  TIMEOUT = 4;                     // Prediction timed out
  FALLBACK = 5;                    // Using fallback heuristic
}

// Batch prediction messages
message LTVBatchRequest {
  repeated LTVPredictionRequest requests = 1;
}

message LTVBatchResponse {
  repeated LTVPredictionResponse responses = 1;
  int32 total_processed = 2;
  int32 successful = 3;
  int32 failed = 4;
}

// Health check messages
message HealthRequest {
  bool include_metrics = 1;        // Include detailed metrics
}

message HealthResponse {
  bool is_healthy = 1;
  string model_version = 2;
  int64 uptime_seconds = 3;
  
  // Accuracy metrics
  double current_accuracy = 4;     // Current model accuracy (%)
  double target_accuracy = 5;      // Target accuracy (94.7%)
  int64 predictions_today = 6;     // Total predictions today
  
  // Performance metrics
  double avg_latency_ms = 7;       // Average prediction latency
  double p95_latency_ms = 8;       // p95 latency
  double p99_latency_ms = 9;       // p99 latency
  
  // Resource usage
  double cpu_usage_percent = 10;
  double memory_usage_mb = 11;
  int32 active_connections = 12;
}
